crates/rapport/tests/snapshots/swift_fail_invalid_tools_version_build.snap
---
source: crates/rapport/tests/swift_e2e.rs
expression: result.snapshot()
---
exit: 2
stdout:
---
(empty)
stderr:
---
You ran: rapport build [project]
SwiftPM project: [project]
`Package.swift` must begin with a valid `// swift-tools-version:` declaration.

## Next

└ run edit [project]/Package.swift
