crates/rapport/tests/snapshots/swift_fail_missing_formatter_lint.snap
---
source: crates/rapport/tests/swift_e2e.rs
expression: result.snapshot()
---
exit: 2
stdout:
---
(empty)
stderr:
---
You ran: rapport lint [project]
SwiftPM project: [project]
SwiftPM formatter tooling was not found.
Install Swift 6+ for `swift format`, or install `swift-format` on PATH.

## Next

└ run swift format --version
└ run swift-format --version
