crates/rapport/tests/snapshots/swift_fail_missing_swift_tool_build.snap
---
source: crates/rapport/tests/swift_e2e.rs
expression: result.snapshot()
---
exit: 2
stdout:
---
(empty)
stderr:
---
You ran: rapport build [project]
SwiftPM project: [project]
Failed to invoke swift: No such file or directory (os error 2)
Install a Swift toolchain from https://www.swift.org/install/ and make sure `swift` is on PATH.

## Next

└ run swift --version
