crates/rapport/tests/snapshots/swift_ok_basic_package_audit.snap
---
source: crates/rapport/tests/swift_e2e.rs
expression: result.snapshot()
---
exit: 0
stdout:
---
status: pass
duration: [duration]

## Next

└ run git push
stderr:
---
(empty)
