crates/rapport/tests/snapshots/swift_ok_no_format_config_lint.snap
---
source: crates/rapport/tests/swift_e2e.rs
expression: result.snapshot()
---
exit: 0
stdout:
---
status: pass
duration: [duration]

## Next

└ run rapport build [project]
stderr:
---
(empty)
